# harpoon-rs

./: .gitignore  Cargo.toml  README.md  build.rs  config.json
src/: assets.rs  config.rs  harpoon.rs  keyboard.rs  main.rs  notification.rs  quick_menu.rs  window.rs
src/mki/: Cargo.toml
src/mki/src/: details.rs  lib.rs  parse.rs
