[package]
name = "harpoon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
active-win-pos-rs = "0.7.1"
fltk = "1.4.1"
lazy_static = "1.4.0"
serde = "1.0.160"
serde_json = "1.0.96"
mki = { path = "../mki-rust-inhibit-hotkey/" }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"


[dependencies.windows]
version = "0.48.0"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "UI",
  "Win32_Graphics_Dwm",
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
